--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,26 +1,43 @@
 version: 0.2
 
+env: 
+  variables: 
+    S3_BUCKET: "resumebucketbala"
+    APP_NAME: "resume"
+    BUILD_ENV: "prod"
+  
 phases:
   install:
     commands:
       - echo installing nodejs
-      - curl -sl https://deb.nodesource.com/setup_12.x | bash -
-      - apt-get install -y node.js
-      - echo installing yarn
-      - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
-      - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-      - apt install --no-install-recommends yarn
-  pre-build:
-    commands:
-      - echo installing dependancies
-      - npm i -g @angular/cli
-      - npm install
+      - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+      - sudo apt-get install -y node.js
+      - echo installing NPM dependencies
+      - sudo apt-get update -y
+      - sudo apt-get install -y apt-transport-https
+      # Install Yarn Package Manager (Replace the commands below if you using NPM).
+      - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+      - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+      - sudo apt-get update -y
+      - sudo apt-get install -y yarn
+      # Install Angular CLI, If you are not using Angular 6, install angular/cli@1.7.0 or lower, confirm by running ng -v inside your project folder
+      - yarn global add @angular/cli@6.0.8
+      # Install node dependancies.
+      - yarn install
   build:
     commands:
       - echo building
-      - ng build -- prod
+      - ng build --${BUILD_ENV}
+  post_build:
+    commands:
+      # Clear S3 bucket.
+      - aws s3 rm s3://${S3_BUCKET} --recursive
+      - echo S3 bucket is cleared.
+      # Copy dist folder to S3 bucket, As of Angular 6, builds are stored inside an app folder in distribution and not at the root of the dist folder
+      - aws s3 cp dist s3://${S3_BUCKET}/${APP_NAME} --recursive
+      - echo Build completed on `date`
 artifacts:
   files:
-    - "**/*"
-  discard-path: no
-  base-directory: dist/resume
+    - '/'
+  discard-path: yes
+  base-directory: 'dist*'
